--- a/pages/templates/view_task.html
+++ b/pages/templates/view_task.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-       <h1>Check On All Tasks</h1>
+       <h1>All Tasks</h1>
          <ul>
         {% for task in all %}
             <li>{{ task.title }} - {{ task.describtion }} - {{ task.status }} - {{ task.date }}</li>
