--- a/pages/templates/view_task.html
+++ b/pages/templates/view_task.html
@@ -14,7 +14,7 @@
        <h1>All Tasks</h1>
          <ul>
         {% for task in all %}
-            <li>{{ task.title }} - {{ task.describtion }} - {{ task.status }} - {{ task.date }}</li>
+            <li>{{ task.title }} | {{ task.describtion }} | {{ task.status }} | {{ task.date }}</li>
         {% endfor %}
     </ul>
         <script src="" async defer></script>
